--- a/sub3suite/src/Dialogs/DocumentationDialog.ui
+++ b/sub3suite/src/Dialogs/DocumentationDialog.ui
@@ -10,6 +10,12 @@
     <height>643</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
