--- a/sub3suite/src/Dialogs/StartupDialog.ui
+++ b/sub3suite/src/Dialogs/StartupDialog.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>702</width>
-    <height>515</height>
+    <width>753</width>
+    <height>543</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Sub3 Suite</string>
@@ -279,6 +285,9 @@
        </property>
        <item>
         <widget class="QTableView" name="tableViewProjects">
+         <property name="alternatingRowColors">
+          <bool>true</bool>
+         </property>
          <property name="selectionMode">
           <enum>QAbstractItemView::SingleSelection</enum>
          </property>
@@ -286,7 +295,7 @@
           <enum>QAbstractItemView::SelectRows</enum>
          </property>
          <property name="showGrid">
-          <bool>true</bool>
+          <bool>false</bool>
          </property>
          <attribute name="horizontalHeaderMinimumSectionSize">
           <number>100</number>
