--- a/sub3suite/src/engines/osint/Osint.ui
+++ b/sub3suite/src/engines/osint/Osint.ui
@@ -318,13 +318,13 @@
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>18</height>
+          <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>16777215</width>
-          <height>18</height>
+          <height>16777215</height>
          </size>
         </property>
         <property name="styleSheet">
@@ -366,13 +366,13 @@
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>18</height>
+          <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
           <width>16777215</width>
-          <height>18</height>
+          <height>16777215</height>
          </size>
         </property>
         <property name="font">
