--- a/sub3suite/src/engines/url/Url.ui
+++ b/sub3suite/src/engines/url/Url.ui
@@ -372,6 +372,9 @@
              <property name="horizontalScrollMode">
               <enum>QAbstractItemView::ScrollPerPixel</enum>
              </property>
+             <property name="showGrid">
+              <bool>false</bool>
+             </property>
              <property name="sortingEnabled">
               <bool>true</bool>
              </property>
