--- a/sub3suite/src/engines/brute/Brute.ui
+++ b/sub3suite/src/engines/brute/Brute.ui
@@ -433,7 +433,7 @@
               <enum>QAbstractItemView::ScrollPerPixel</enum>
              </property>
              <property name="showGrid">
-              <bool>true</bool>
+              <bool>false</bool>
              </property>
              <property name="sortingEnabled">
               <bool>true</bool>
@@ -457,10 +457,10 @@
               <bool>false</bool>
              </attribute>
              <attribute name="verticalHeaderMinimumSectionSize">
-              <number>18</number>
+              <number>16</number>
              </attribute>
              <attribute name="verticalHeaderDefaultSectionSize">
-              <number>18</number>
+              <number>16</number>
              </attribute>
             </widget>
            </item>
