--- a/sub3suite/res.qrc
+++ b/sub3suite/res.qrc
@@ -64,13 +64,21 @@
         <file>res/icons/splash.png</file>
         <file>res/icons/main_logo.ico</file>
         <file>res/icons/downArrow.png</file>
+        <file>res/icons/radio_checked_focus.png</file>
+        <file>res/icons/radio_unchecked_focus.png</file>
+        <file>res/icons/radio_checked.png</file>
+        <file>res/icons/radio_unchecked.png</file>
     </qresource>
     <qresource prefix="/files">
         <file>res/files/srv.txt</file>
-        <file>res/files/userAgents.txt</file>
         <file>res/files/LICENSE</file>
         <file>res/files/under_development.html</file>
         <file>res/files/HISTORY</file>
+        <file>res/files/user_agents.txt</file>
+        <file>res/files/AUTHORS</file>
+        <file>res/files/DONORS</file>
+        <file>res/files/MODULES</file>
+        <file>res/files/ABOUT</file>
     </qresource>
     <qresource prefix="/themes">
         <file>res/themes/default.css</file>
