--- a/sub3suite/src/engines/dns/Dns.ui
+++ b/sub3suite/src/engines/dns/Dns.ui
@@ -347,7 +347,7 @@
              <item>
               <widget class="QLabel" name="labelResultsCount">
                <property name="sizePolicy">
-                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                  <horstretch>0</horstretch>
                  <verstretch>0</verstretch>
                 </sizepolicy>
@@ -355,13 +355,13 @@
                <property name="minimumSize">
                 <size>
                  <width>0</width>
-                 <height>20</height>
+                 <height>0</height>
                 </size>
                </property>
                <property name="maximumSize">
                 <size>
                  <width>16777215</width>
-                 <height>20</height>
+                 <height>16777215</height>
                 </size>
                </property>
                <property name="styleSheet">
