--- a/sub3suite/res.qrc
+++ b/sub3suite/res.qrc
@@ -53,7 +53,6 @@
         <file>res/icons/updates.png</file>
         <file>res/icons/qt-logo.png</file>
         <file>res/icons/save.png</file>
-        <file>res/icons/copy.png</file>
         <file>res/icons/expand.png</file>
         <file>res/icons/collapse.png</file>
         <file>res/icons/delete.png</file>
@@ -68,6 +67,8 @@
         <file>res/icons/radio_unchecked_focus.png</file>
         <file>res/icons/radio_checked.png</file>
         <file>res/icons/radio_unchecked.png</file>
+        <file>res/icons/copy.png</file>
+        <file>res/icons/duplicate.png</file>
     </qresource>
     <qresource prefix="/files">
         <file>res/files/srv.txt</file>
