removed multi-level scan for bruteforce module

--- a/sub3suite/res/themes/default.css
+++ b/sub3suite/res/themes/default.css
@@ -488,6 +488,17 @@ QListView::item:selected {
 }
 
 /****************************** PushButton ******************************/
+QPushButton:disabled {
+    min-height: 23px;
+    min-width: 75px;
+    padding: 1px;
+    border-style: solid;
+    border-color: rgb(15,15,15);
+    border-width: 1px;
+    color: grey;
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgb(70, 70, 70),stop: 0.4 rgb(45,45,45), stop: 0.5 rgb(45,45,45) stop:1 rgb(70, 70, 70));
+}
+
 QPushButton:!hover {
     min-height: 23px;
     min-width: 75px;
